force-app/main/default/objects/Error_Log__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <inlineHelpText>Stores the complete stack track about the problem</inlineHelpText>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>