force-app/main/default/objects/Error_Log__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <inlineHelpText>This field stores the date/time details when the error occurred</inlineHelpText>
    <label>Log Date/Time</label>
    <type>DateTime</type>
</CustomField>