force-app/main/default/objects/Error_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <inlineHelpText>The name of either apex class or apex trigger</inlineHelpText>
    <label>Process Name</label>
    <type>TextArea</type>
</CustomField>